--- a/Starfinder HUD/translations/fr.json
+++ b/Starfinder HUD/translations/fr.json
@@ -11,10 +11,10 @@
 	"ship": "VAISSEAU",
 	"drone": "DRONE",
 	"house-rules": "RÈGLES MAISON",
-	"resolve": "RESOLVE",
-	"key-ability": "KEY ABILITY",
-	"highest-ability": "HIGHEST ABILITY",
-	"buff-stacking": "BUFF STACKING",
+	"resolve": "PERSÉVÉRANCE",
+	"key-ability": "CARACTÉRISTIQUE ESSENTIELLE",
+	"highest-ability": "PLUS HAUTE CARACTÉRISTIQUE",
+	"buff-stacking": "LISTE DES BONUS",
 	"half-specialization-weapons": "HALF SPECIALIZATION WEAPONS",
 	"character-info": "INFOS DU PERSONNAGE",
 	"class-details": "CLASS DETAILS",
@@ -41,8 +41,8 @@
 	"skills": "COMPÉTENCES",
 	"abi": "CARAC.",
 	"spell": "SORT",
-	"poor": "POOR",
-	"good": "GOOD",
+	"poor": "FAIBLE",
+	"good": "BON",
 	"menus": "MENUS",
 	"initiative": "INITIATIVE",
 	"attacks": "ATTAQUES",
@@ -53,8 +53,8 @@
 	"mods": "MODS",
 	"ability-scores": "VALEURS DES CARACTÉRISTIQUES",
 	"mod": "MOD",
-	"tot": "TOT",
-	"pen": "PEN",
+	"tot": "TOTAL",
+	"pen": "MALUS",
 	"drain": "DRAIN",
 	"strength": "FORCE",
 	"dexterity": "DEXTÉRITÉ",
@@ -62,15 +62,15 @@
 	"intelligence": "INTELLIGENCE",
 	"wisdom": "SAGESSE",
 	"charisma": "CHARISME",
-	"health": "HEALTH",
+	"health": "SANTÉ",
 	"sp": "SP",
 	"rp": "RP",
 	"temp-hp": "TMP",
-	"armorclass": "ARMOR CLASS",
-	"eac": "EAC",
-	"kac": "KAC",
-	"cmd": "CMD",
-	"dr-resist": "DR/RESIST",
+	"armorclass": "CLASSE D'ARMURE",
+	"eac": "CAE",
+	"kac": "CAC",
+	"cmd": "CMO",
+	"dr-resist": "RD / RÉSISTANCE",
 	"savingthrows": "JETS DE SAUVEGARDE",
 	"base": "BASE",
 	"rnk": "RANG",
@@ -79,7 +79,7 @@
 	"acp": "ACP",
 	"athletics": "ATHLÉTISME",
 	"bluff": "BLUFF ",
-	"computers": "COMPUTERS",
+	"computers": "ORDINATEURS",
 	"culture": "CULTURE",
 	"diplomacy": "DIPLOMACIE",
 	"disguise": "DÉGUISEMENT",
@@ -112,11 +112,11 @@
 	"ammo": "munitions",
 	"usage": "UTILISATION",
 	"special": "SPÉCIAL",
-	"additional-attack": "ADDITIONAL ATTACKS",
-	"roll-full-attack_": "ROLL FULL ATTACK: ",
+	"additional-attack": "ATTAQUES ADDITIONNELLES",
+	"roll-full-attack_": "JET DE PLEINE ATTAQUE : ",
 	"query": "DEMANDER",
-	"always": "ALWAYS",
-	"never": "NEVER",
+	"always": "TOUJOURS",
+	"never": "JAMAIS",
 	"number-of-attacks:": "NOMBRE D'ATTAQUES:",
 	"attacher": "ATTACHER",
 	"equipment": "ÉQUIPEMENT",
@@ -129,18 +129,18 @@
 	"num": "NUM",
 	"bulk": "BULK",
 	"cost": "COST",
-	"abilities": "ABILITIES",
-	"constant": "CONSTANT",
-	"at-will": "AT WILL",
-	"x/day": "X/DAY",
-	"source": "SOURCE",
+	"abilities": "CARACTÉRISTIQUES",
+	"constant": "PERMANENTE",
+	"at-will": "À VOLONTÉ",
+	"x/day": "X/JOUR",
+	"source": "SOURCE ",
 	"ex": "EX",
 	"su": "SU",
-	"target": "TARGET",
-	"duration": "DURATION",
-	"_-daily-uses": "Daily Uses",
-	"atk": "ATK",
-	"save-effect": "SAVE EFFECT",
+	"target": "CIBLE",
+	"duration": "DURÉE",
+	"_-daily-uses": "Utilisations quotidiennes",
+	"atk": "ATT",
+	"save-effect": "EFFET DE SAUVEGARDE",
 	"dex": "DEX",
 	"con": "CON",
 	"int": "INT",
@@ -184,59 +184,59 @@
 	"spells-known": "SPELLS KNOWN",
 	"(cl": "(CL",
 	"statistics": "STATISTICS",
-	"feats": "FEATS",
-	"other-abilities": "OTHER ABILITIES",
-	"gear": "GEAR",
-	"ecology": "ECOLOGY",
-	"environment": "ENVIRONMENT",
-	"organization": "ORGANIZATION",
-	"tactics": "TACTICS",
-	"special-abilities": "SPECIAL ABILITIES",
+	"feats": "DONS",
+	"other-abilities": "AUTRES CAPACITÉS",
+	"gear": "ÉQUIPEMENT",
+	"ecology": "ÉCOLOGIE",
+	"environment": "ENVIRONNEMENT",
+	"organization": "ORGANISATION",
+	"tactics": "TACTIQUES",
+	"special-abilities": "CAPACITÉS SPÉCIALES",
 	"purpose": "PURPOSE",
 	"import": "IMPORT",
 	"export": "EXPORT",
-	"paizo-statblock": "PAIZO STATBLOCK",
-	"srd-statblock": "SRD STATBLOCK",
-	"starship-info": "STARSHIP INFO",
-	"starship-name": "STARSHIP NAME",
-	"tier": "TIER",
-	"make-and-model": "MAKE AND MODEL",
-	"frame": "FRAME",
-	"maneuverability": "MANEUVERABILITY",
+	"paizo-statblock": "BLOCKSTAT PAIZO",
+	"srd-statblock": "BLOCKSTAT SRD",
+	"starship-info": "INFO VAISSEAU",
+	"starship-name": "NOM DU VAISSEAU",
+	"tier": "ÉCHELON",
+	"make-and-model": "MARQUE ET MODÈLE",
+	"frame": "ARMATURE",
+	"maneuverability": "MANŒUVRABILITÉ",
 	"drift-rating": "DRIFT RATING",
-	"crew": "CREW",
-	"captain": "CAPTAIN",
-	"engineer": "ENGINEER",
-	"pilot": "PILOT",
-	"gunner": "GUNNER",
+	"crew": "ÉQUIPAGE",
+	"captain": "CAPITAINE",
+	"engineer": "INGÉNIEUR",
+	"pilot": "PILOTE",
+	"gunner": "ARTILLEUR",
 	"gunnery": "GUNNERY",
-	"science-officer": "SCIENCE OFFICER ",
+	"science-officer": "OFFICIER SCIENTIFIQUE ",
 	"captain-query": "ACTIONS DU CAPITAINE",
 	"engineer-query": "INGÉNIEURS",
 	"pilot-query": "PILOTES",
 	"science-officer-query": "OFFICIERS SCIENTIFIQUE",
 	"gunner-query": "CANONNIERS",
-	"starship-defenses": "DEFENSES",
+	"starship-defenses": "DÉFENSES",
 	"total": "TOTAL",
-	"ac": "AC",
+	"ac": "CA",
 	"tl": "TL",
-	"current": "CURRENT",
-	"thresholds": "THRESHOLDS",
-	"damage": "DAMAGE",
-	"critical": "CRITICAL",
-	"shield-total": "SHIELD TOTAL",
-	"forward": "FORWARD",
-	"port": "PORT",
+	"current": "ACTUEL",
+	"thresholds": "SEUILS",
+	"damage": "DÉGÂTS",
+	"critical": "CRITIQUE",
+	"shield-total": "TOTAL DES BOUCLIERS",
+	"forward": "PROUE",
+	"port": "BÂBORD",
 	"aft": "AFT",
-	"starboard": "STARBOARD",
-	"turret": "TURRET",
-	"systems": "SYSTEMS",
-	"expansion-bays": "EXPANSION BAYS",
-	"cargo/passengers": "CARGO/PASSENGERS",
+	"starboard": "TRIBORD",
+	"turret": "TOURELLE",
+	"systems": "SYSTÈMES",
+	"expansion-bays": "COMPARTIMENTS ANNEXES",
+	"cargo/passengers": "CARGO/PASSAGERS",
 	"cargo-placeholder": "Enter any cargo/passengers being carried here",
 	"system-status": "SYSTEM STATUS",
-	"life-support-dice-range": "LIFE SUPPORT (1-10)",
-	"nominal": "NOMINAL",
+	"life-support-dice-range": "SYSTÈMES DE SURVIE (1-10)",
+	"nominal": "NORMAL",
 	"glitching": "GLITCHING",
 	"malfunctioning": "MALFUNCTIONING",
 	"wrecked": "WRECKED",
@@ -246,7 +246,7 @@
 	"power-core-dice-range": "POWER CORE (81-100)",
 	"fwd (1)": "FWD (1)",
 	"stbd (2)": "STBD (2)",
-	"port (4)": "PORT (4)",
+	"port (4)": "BÂBORD (4)",
 	"aft (3)": "AFT (3)",
 	"1st-attack": "1st ATTACK",
 	"targets": "TARGETS",
