--- a/Call_of_Cthulhu_7th_Ed/translations/pl.json
+++ b/Call_of_Cthulhu_7th_Ed/translations/pl.json
@@ -135,68 +135,68 @@
 	"listen_mdr-u": "Nasłuchiwanie(25%)",
 	"locksmith-u": "Ślusarstwo(01%)",
 	"locksmith-r-txt": "Rzut na Ślusarstwo",
-	"mechrepair-u": "Mech Repair(10%)",
-	"mechrepair-r-txt": "Mech Repair Roll",
-	"medicine-u": "Medicine(01%)",
-	"medicine-r-txt": "Rzut na ",
-	"naturalworld-u": "Natural World(10%)",
-	"naturalworld-r-txt": "Rzut na ",
-	"naturalworld_da-u": "Natural World(20%)",
-	"naturalworld_et-u": "Natural World(20%)",
-	"navigate-u": "Navigate(10%)",
-	"navigate-r-txt": "Rzut na ",
-	"occult-u": "Occult(05%)",
-	"occult-r-txt": "Rzut na ",
-	"ophvmachine-u": "Op Hv Machine(01%)",
-	"ophvmachine-r-txt": "Op Hv Machine Roll",
-	"ownkingdom_da-u": "Own Kingdom(20%)",
-	"otherkingdom1": "Other Kingdom 1",
-	"otherkingdom2": "Other Kingdom 2",
-	"persuade-u": "Persuade(10%)",
-	"persuade-r-txt": "Rzut na ",
-	"pilotboat-u": "Pilot Boat(01%)",
-	"psychology-u": "Psychology(10%)",
-	"psychology-r-txt": "Rzut na ",
-	"psychoanalysis-u": "Psychoanalysis(01%)",
-	"psychoanalysis-r-txt": "Rzut na ",
-	"readandwritelang1": "Read and Write Language 1",
-	"readandwritelang2": "Read and Write Language 2",
-	"religion-u": "Religion(20%)",
-	"repair/devise-u": "Repair/Devise(20%)",
-	"ride-u": "Ride(05%)",
-	"ride-r-txt": "Rzut na ",
-	"ride_ow-u": "Ride(15%)",
-	"rope_use_ow-u": "Rope Use(05%)",
-	"scavenge-u": "Scavenge(15%)",
-	"sleightofhand-u": "Sleight of Hand(10%)",
-	"sleightofhand-r-txt": "Rzut na ",
-	"sleight_of_hand_da": "Sleight of Hand(25%)",
-	"spothidden-u": "Spot Hidden(25%)",
-	"spothidden-r-txt": "Rzut na ",
-	"stealth-u": "Stealth(20%)",
-	"stealth-r-txt": "Stealth Roll",
-	"swim_da-u": "Swim(25%)",
-	"swim-u": "Swim(20%)",
-	"swim-r-txt": "Rzut na ",
-	"techrepair-u": "Tech. Repair(01%)",
-	"throw-u": "Throw(20%)",
-	"throw-r-txt": "Rzut na ",
-	"throw_da-u": "Throw(25%)",
-	"track-u": "Track(10%)",
-	"track-r-txt": "Rzut na ",
-	"trap-u": "Trap(10%)",
-	"otherskills-u": "Other Skills:",
-	"animalhandling-u": "Animal Handling(05%)",
-	"firearms(varies)-u": "Firearms(Varies)",
-	"art/craft-u": "Art/Craft(05%)",
-	"hypnosis-u": "Hypnosis(01%)",
-	"artillery-u": "Artillery(01%)",
-	"language(other)-u": "Language(Other)(01%)",
-	"computeruse-u": "Computer Use(05%)",
-	"computermaint_ic-u": "Computer Maint.(05%)",
-	"pilot-u": "Pilot(01%)",
-	"demolitions-u": "Demolitions(01%)",
-	"demolitions-txt": "Rzut na ",
+	"mechrepair-u": "Naprawa mechanizmów(10%)",
+	"mechrepair-r-txt": "Rzut na Naprawę mechanizmów",
+	"medicine-u": "Medycyna(01%)",
+	"medicine-r-txt": "Rzut na Medycynę",
+	"naturalworld-u": "Wiedza o naturze(10%)",
+	"naturalworld-r-txt": "Rzut na Wiedzę o naturze",
+	"naturalworld_da-u": "Wiedza o naturze(20%)",
+	"naturalworld_et-u": "Wiedza o naturze(20%)",
+	"navigate-u": "Nawigacja(10%)",
+	"navigate-r-txt": "Rzut na Nawigację",
+	"occult-u": "Okultyzm(05%)",
+	"occult-r-txt": "Rzut na Okultyzm",
+	"ophvmachine-u": "Obsługa ciężkiego sprzętu(01%)",
+	"ophvmachine-r-txt": "Rzut na Obsługę ciężkiego sprzętu",
+	"ownkingdom_da-u": "Własne królestwo(20%)",
+	"otherkingdom1": "Obce królestwo 1",
+	"otherkingdom2": "Obce królestwo 2",
+	"persuade-u": "Perswazja(10%)",
+	"persuade-r-txt": "Rzut na Perswazję",
+	"pilotboat-u": "Kierowanie łodzią(01%)",
+	"psychology-u": "Psychologia(10%)",
+	"psychology-r-txt": "Rzut na Psychologię",
+	"psychoanalysis-u": "Psychoanaliza(01%)",
+	"psychoanalysis-r-txt": "Rzut na Psychoanalizę",
+	"readandwritelang1": "Czytanie i pisanie w języku 1",
+	"readandwritelang2": "Czytanie i pisanie w języku 2",
+	"religion-u": "Religia(20%)",
+	"repair/devise-u": "Naprawa/Wynalazczość(20%)",
+	"ride-u": "Jeździectwo(05%)",
+	"ride-r-txt": "Rzut na Jeździectwo",
+	"ride_ow-u": "Jeździectwo(15%)",
+	"rope_use_ow-u": "Stosowanie lin(05%)",
+	"scavenge-u": "Zbieractwo(15%)",
+	"sleightofhand-u": "Zręczne palce(10%)",
+	"sleightofhand-r-txt": "Rzut na Zręczne palce",
+	"sleight_of_hand_da": "Zręczne palce(25%)",
+	"spothidden-u": "Spostrzegawczość(25%)",
+	"spothidden-r-txt": "Rzut na Spostrzegawczość",
+	"stealth-u": "Ukrywanie(20%)",
+	"stealth-r-txt": "Rzut na Ukrywanie",
+	"swim_da-u": "Pływanie(25%)",
+	"swim-u": "Pływanie(20%)",
+	"swim-r-txt": "Rzut na Pływanie",
+	"techrepair-u": "Naprawa urządzeń tech.(01%)",
+	"throw-u": "Rzucanie(20%)",
+	"throw-r-txt": "Rzut na Rzucanie",
+	"throw_da-u": "Rzucanie(25%)",
+	"track-u": "Tropienie(10%)",
+	"track-r-txt": "Rzut na Tropienie",
+	"trap-u": "Pułapki(10%)",
+	"otherskills-u": "Inne umiejętności:",
+	"animalhandling-u": "Tresura zwierząt(05%)",
+	"firearms(varies)-u": "Bron palna(różne)",
+	"art/craft-u": "Sztuka/Rzemiosło(05%)",
+	"hypnosis-u": "Hipnoza(01%)",
+	"artillery-u": "Broń artyleryjska(01%)",
+	"language(other)-u": "Język(obcy)(01%)",
+	"computeruse-u": "Korzystanie z komputerów(05%)",
+	"computermaint_ic-u": "Naprawa komputerów(05%)",
+	"pilot-u": "Pilotowanie(01%)",
+	"demolitions-u": "Materiały wybuchowe(01%)",
+	"demolitions-txt": "Rzut na Materiały wybuchowe",
 	"readlips-u": "Czytanbie z ruchu warg(01%)",
 	"electronics-u": "Elektronika(01%)",
 	"science-u": "Nauka(01%)",
@@ -204,8 +204,8 @@
 	"survival-u": "Survival(10%)",
 	"sysops-u": "SysOps(10%)",
 	"zerog_ic-u": "Zero-G(05%)",
-	"talents-u": "Talents",
-	"shield-z": "Shield",
+	"talents-u": "Talenty",
+	"shield-z": "Tarcza",
 	"head-u": "Głowa",
 	"body-u": "Korpus",
 	"l_arm-u": "L.Ręka",
@@ -243,12 +243,12 @@
 	"Other Skill #9": "Inna umiejętność #9",
 	"Other Skill #10": "Inna umiejętność #10",
 	"spells-u": "Zaklęcia",
-	"companions&mounts-u": "Companions & Mounts",
+	"companions&mounts-u": "Towarzysze i wierzchowce",
 	"vehicles-u": "Pojazdy",
 	"cap-u": "Ładowność",
 	"vehicleattack-u": "Vehicular Impact Attack",
 	"operatorskill": "Operator's Skill",
-	"MountedWeaponSkill": "Mounted Weapon Skill",
+	"MountedWeaponSkill": "Broń stacjonarna",
 	"generalinfo-u": "General Info",
 	"cargo-u": "Cargo",
 	"passengers-u": "Passengers",
@@ -309,37 +309,37 @@
 	"cost-u": "Koszt",
 	"castime-u": "Czas rzucania",
 	"description-u": "Opis",
-	"bout-of-madness-u-time": "Bout of Madness - Real Time",
-	"bout-of-madness-u-summary": "Bout of Madness - Summary",
+	"bout-of-madness-u-time": "Szaleństwo - czas rzeczywisty",
+	"bout-of-madness-u-summary": "Szaleństwo - łącznie",
 	"amnesia": "Amnezja:",
 	"amnesia-dec": "The investigator has no memory of events that have taken place since they were last in a place of safety. This lasts for 1D10 rounds.",
 	"psychosomatic-disability": "Psychosomatic disability:",
 	"psychosomatic-disability-dec": "The investigator suffers psychosomatic blindness, deafness, or loss of the use of a limb or limbs for 1D10 rounds.",
-	"violence": "Violence:",
+	"violence": "Przemoc:",
 	"violence-dec": "A red mist descends on the investigator and they explode in a spree of uncontrolled violence and destruction directed at their surroundings, allies or foes alike for 1D10 rounds.",
-	"paranoia": "Paranoia:",
+	"paranoia": "Paranoja:",
 	"paranoia-dec": "The investigator suffers severe paranoia for 1D10 rounds.",
 	"significant-person": "Significant Person:",
 	"significant-person-dec": "The investigator mistakes another person in the scene for a Significant Person of theirs. This lasts 1D10 rounds.",
-	"faint": "Faint:",
+	"faint": "Utrata przytomności:",
 	"faint-dec": "The investigator faints. They recover after 1D10 rounds.",
 	"flee-in-panic": "Flee in panic:",
 	"flee-in-panic-dec": "The investigator is compelled to get as far away as possible by whatever means are available. They travel for 1D10 rounds.",
 	"physical-hysterics-or-emotional-outburst": "Physical hysterics or emotional outburst:",
 	"physical-hysterics-or-emotional-outburst-dec": "The investigator is incapacitated from laughing, crying, screaming, etc. for 1D10 rounds.",
-	"phobia": "Phobia:",
+	"phobia": "Fobia:",
 	"phobia-dec": "The investigator gains a new phobia. Roll 1D100 on Sample Phobias Table (or choose one). Even if the source of the phobia is not present, the investigator imagines it is there for the next 1D10 rounds.",
 	"mania": "Mania:",
 	"mania-dec": "The investigator gains a new mania. Roll 1D100 on Sample Manias Table (or choose one). The investigator seeks to indulge in their new mania for the next 1D10 rounds.",
 	"amnesia-dec2": "The investigator comes to their senses in some unfamiliar place with no memory of who they are. Their memories will slowly return to them over time.",
-	"robbed": "Robbed:",
+	"robbed": "Kradzież:",
 	"robbed-dec": "The investigator comes to their senses 1D10 hours later, having been robbed. They are unharmed. If they were carrying a Treasured Possession, make a Luck roll to see if it was stolen. Everything else of value is automatically missing.",
-	"battered": "Battered:",
+	"battered": "Sponiewieranie:",
 	"battered-dec": "The investigator comes to their senses 1D10 hours later to find themselves battered and bruised. Hit points are reduced to half of what they were before going insane, though this does not cause a Major wound. They have not been robbed. How the damage was sustained is up to the Keeper.",
 	"violence-dec2": "The investigator explodes in a spree of violence and destruction. When the investigator comes to their senses, their actions may or may not be apparent or remembered. Who or what the investigator has inflicted violence upon and whether they have killed or simply inflicted harm is up to the Keeper.",
-	"ideology-beliefs": "Ideology/Beliefs:",
+	"ideology-beliefs": "Ideologia/Wierzenia:",
 	"ideology-beliefs-dec": "Review the investigator’s backstory entry for Ideology and Beliefs. The investigator manifests one of these in an extreme, crazed and demonstrative manner.",
-	"significant-people": "Significant People:",
+	"significant-people": "Ważne osoby:",
 	"significant-people-dec": "Consult the investigator’s backstory entry for Significant People and why the relationship is so important. In the time that passes (1D10 hours or more) the investigator has done their best to get close to that person and act upon their relationship in some way.",
 	"institutionalized": "Institutionalized:",
 	"institutionalized-dec": "The investigator comes to their senses in a psychiatric ward or police cell. They may slowly recall the events that led them there.",
