--- a/Adventures in Middle Earth/translations/fr.json
+++ b/Adventures in Middle Earth/translations/fr.json
@@ -33,7 +33,7 @@
 	"athletics-u": "ATHLÉTISME",
 	"deception-u": "SUPERCHERIE",
 	"history-u": "HISTOIRE",
-	"insight-u": "PERSPICACITÉ",
+	"insight-u": "INTUITION",
 	"intimidation-u": "INTIMIDATION",
 	"investigation-u": "INVESTIGATION",
 	"medicine-u": "MÉDECINE",
@@ -112,11 +112,11 @@
 	"skills": "Compétences",
 	"acrobatics": "Acrobaties",
 	"animal_handling": "Dressage",
-	"lore": "Connaissance",
+	"lore": "Mystères",
 	"athletics": "Athlétisme",
 	"deception": "Supercherie",
 	"history": "Histoire",
-	"insight": "Perspicacité",
+	"insight": "Intuition",
 	"intimidation": "Intimidation",
 	"investigation": "Investigation",
 	"medicine": "Médecine",
@@ -267,7 +267,7 @@
 	"performance-core": "Représentation <span>(Cha)</span>",
 	"persuasion-core": "Persuasion <span>(Cha)</span>",
 	"riddle-core": "Énigmes<span>(Int)</span>",
-	"shadowlore-core": "Connaissance de l'ombre<span>(Int)</span>",
+	"shadowlore-core": "Conscience de l'ombre<span>(Int)</span>",
 	"sleight_of_hand-core": "Escamotage <span>(Dex)</span>",
 	"stealth-core": "Discrétion <span>(Dex)</span>",
 	"survival-core": "Survie <span>(Sag)</span>",
@@ -340,7 +340,7 @@
 	"distinctive-quality-u": "QUALITÉ DISTINCTIVE",
 	"specialty-u": "SPÉCIALITÉ",
 	"hope-u": "ESPOIR",
-	"dispair-u": "DESPAIR",
+	"dispair-u": "DÉSESPOIR",
 	"class-resource-u": "RESSOURCE DE CLASSE",
 	"other-resource-u": "AUTRES RESSOURCES",
 	"position-u": "POSITION",
@@ -460,12 +460,12 @@
 	"npc-name-in-rolls-desc:-u": "Dans les résultats des jets de PNJ, afficher ou masquer le nom du PNJ dans le cartouche de résultat du jet.",
 	"public:-u": "PUBLIC",
 	"to-gm:-u": "AU <span class='togm'>MJ</span>",
-	"toggle-roll-whisper": "Whisper Toggle",
+	"toggle-roll-whisper": "Murmurer au MJ ?",
 	"attribute-opts-u": "OPTIONS DES CARACTÉRISTIQUES",
 	"save-opts-u": "OPTIONS DES SAUVEGARDES",
 	"by-level": "Selon le niveau (par défaut)",
 	"prof-die": "Dé de maîtrise (Manuel du MJ)",
-	"custom": "Custom",
+	"custom": "Personnalisé",
 	"core-die-roll:-u": "JET DE DÉ DE BASE&nbsp;:",
 	"has-attack-u": "A UNE ATTAQUE",
 	"variant-phb": "Variante (cf manuel du joueur)",
