--- a/Ars_Magica_5th/translations/fr.json
+++ b/Ars_Magica_5th/translations/fr.json
@@ -178,8 +178,8 @@
     "points": "Points",
     "trait": "Trait",
     "current": "Actuel",
-    "attaining-rt": "Attaining",
-    "casts-rt": "casts",
+    "attaining-rt": "Atteignant",
+    "casts-rt": "lance",
     "defend-rt": "Défendre",
     "leverages-rt": "moyens de pression",
     "weakness-m": "Faiblesse",
@@ -188,5 +188,5 @@
     "rank-m": "Rang",
     "with-rt": "avec",
     "circumstantial": "Circonstanciel",
-    "query": "Name of Query"
+    "query": "Nom de la requête"
 }
