--- a/Blades in the Dark/translations/fr.json
+++ b/Blades in the Dark/translations/fr.json
@@ -654,7 +654,7 @@
     "playbook_ability_cut-out_description": "Vous pouvez dépenser votre armure spéciale pour résister à une conséquence en rapport avec la suspicion ou la persuasion, ou pour vous dépasser pour accomplir un subterfuge.",
     "playbook_ability_daredevil": "Casse-cou",
     "playbook_ability_daredevil_description": "Quand vous êtes dans une position désespérée, vous pouvez gagner +1 dé à votre jet d’action si vous subissez -1 dé au jet de résistance contre les conséquences de cette action.",
-    "playbook_ability_dark_talent": "Dark Talent",
+    "playbook_ability_dark_talent": "Sombre talent",
     "playbook_ability_dark_talent_description": "Choose Insight, Prowess, or Resolve. Your max rating for actions under that attribute becomes 5. When you take this ability, add +1 dot to the resistance rating of the attribute you've chosen.",
     "playbook_ability_dissipate": "Dissiper",
     "playbook_ability_dissipate_description": "You can disperse the electroplasmic vapor of your ghostly form in order to pass through solid objects for a moment. Take 1 drain when you dissipate, plus 1 drain for each feature: It lasts longer (a minute — an hour — a day) — you also become invisible — anything that passes through your form becomes dangerously electrified or frozen.",
@@ -692,7 +692,7 @@
     "playbook_ability_ghost_image_description": "You may create an illusion, which affects one sense (sight, hearing, smell, etc) for as long as you concentrate. Take 1 stress when it manifests, plus 1 stress for each additional feature: it can affect multiple senses—it can move—it last for several minutes after you stop concentrating.",
     "playbook_ability_ghost_in_the_machine": "Fantôme dans la Machine",
     "playbook_ability_ghost_in_the_machine_description": "You can make inanimate objects move on their own, as if possessed by a ghost. Take 1 stress to do so, plus 1 stress for each extra feature: The objects function as a weapon—you break or damage something—you cause numerous objects to move.",
-    "playbook_ability_ghost_legion": "Ghost Legion",
+    "playbook_ability_ghost_legion": "Légion Fantôme",
     "playbook_ability_ghost_legion_description": "Your entourage gains potency when fighting the supernatural or defending you from it, and an arcane ability: they can capture ghosts, they can survive in the deathlands, or you can possess their bodies from afar. Take this ability again to choose an additional arcane ability for your entourage.",
     "playbook_ability_ghost_mind": "Medium",
     "playbook_ability_ghost_mind_description": "Vous êtes toujours conscient des entités surnaturelles qui vous entourent. Vous obtenez +1 dé quand vous recueillez des informations sur le surnaturel.",
