--- a/Das_Schwarze_Auge_5_Tsa_Edition/translations/en.json
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/translations/en.json
@@ -595,5 +595,41 @@
     "naturtalente-liste": "tierkunde,fischen,orientierung,pflanzenkunde,fesseln,wildnisleben,faehrtensuchen",
     "wissenstalente-liste": "sternkunde,glueckspiel,geographie,geschichtswissen,rechtskunde,magiekunde,rechnen,mechanik,sagenlegenden,goetterkulte,sphaerenkunde,kriegskunst",
     "handwerkstalente-liste": "alchemie,malenzeichnen,stoffbearbeitung,handel,fahrzeuge,steinbearbeitung,lederbearbeitung,metallbearbeitung,musizieren,schloesserknacken,lebensmittelbearbeitung,boote,hkkrankheiten,hkgift,hkseele,hkwunden,holzbearbeitung",
-    "farbschema": "Color Scheme"
+    "farbschema": "Color Scheme",
+    "add_modifikator": "Modifikator hinzufügen",
+    "mu_mod": "Mut +/-",
+    "kl_mod": "Klugheit +/-",
+    "in_mod": "Intuition +/-",
+    "ch_mod": "Charisma +/-",
+    "ff_mod": "Fingerfertigkeit +/-",
+    "ge_mod": "Gewandheit +/-",
+    "ko_mod": "Konstitution +/-",
+    "kk_mod": "Körperkraft +/-",
+    "abgeleitete_werte": "abgeleitete Werte",
+    "le_modifikator": "Lebensenergie +/-",
+    "ae_modifikator": "Astralenergie +/-",
+    "ke_modifikator": "Karmalenergie +/-",
+    "sk_modifikator": "Seelenkraft +/-",
+    "zk_modifikator": "Zähigkeit +/-",
+    "ini_modifikator": "Initiative +/-",
+    "aw_modifikator": "Ausweichen +/-",
+    "gs_modifikator": "Geschwindigkeit +/-",
+    "schips_modifikator": "Schicksalspunkte +/-",
+    "le_regeneration_mod": "Regeneration LE +/-",
+    "ae_regeneration_mod": "Regeneration AE +/-",
+    "ke_regeneration_mod": "Regeneration KE +/-",
+    "kampfsonderfertigkeiten": "Kampfsonderfertigkeiten",
+    "at_sf_mod": "Attacke +/-",
+    "pa_sf_mod": "Parade +/-",
+    "aw_sf_mod": "Ausweichen +/-",
+    "tp_sf_mod": "Trefferpunkte +/-",
+    "fk_sf_mod": "Fernkampf +/-",
+    "nh_at_sf_mod": "Nebenhand AT +/-",
+    "nh_pa_sf_mod": "Nebenhand PA +/-",
+    "nh_tp_sf_mod": "Nebenhand TP +/-",
+    "parade_zweite_mod": "Zusätzliche PA +/-",
+    "ausweichen_zweite_mod": "Zusätzliches AW +/-",
+    "beidhand_kampf_mod": "Beidhändigkeit-Mod. +/-",
+    "falsche_hand_mod": "Falsche Hand Mod. +/-",
+    "talente_mod": "Talente Würfelmodifikator"
 }
