--- a/Das_Schwarze_Auge_5_Tsa_Edition/translations/fr.json
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/translations/fr.json
@@ -30,7 +30,7 @@
     "augenfarbe": "Couleur des yeux",
     "ausruestung": "Équipement",
     "ausweichen": "Esquive",
-    "auswirkung": "Répercussions",
+    "auswirkung": "Effet :",
     "basis": "Base",
     "be": "ENC",
     "be-aktiviert": "ENC activé",
@@ -104,7 +104,7 @@
     "gm": "MJ ",
     "gross": "grand",
     "groesse": "Taille",
-    "grundwert": "GW",
+    "grundwert": "Valeur de base",
     "grundwerte": "Qualités",
     "gs": "VIT",
     "haarfarbe": "Couleur des cheveux",
@@ -588,12 +588,48 @@
     "Regen-AE": "Régénération d'Énergie Astrale",
     "Regen-KE": "Régénération d'Énergie Karmique",
     "keine": "aucun",
-    "status-liste": "cloué sur place,inconscient,aveugle,rage sanguinaire,enflammé,à l'étroit,incapable d'agir,malade,à terre,déveine chronique,frénétique,stupide,sourd,surpris,mauvaise odeur,invisible,empoisonné,pétrifié",
-    "zustaende-liste": "étourdissement,encombrement,extase,terreur,paralysie,douleur,transe,confusion",
-    "koerpertalente-liste": "vol,batellerie,escalade,maîtrise corporelle,tour de force,équitation,natation,maîtrise de soi,chant,acuité sensorielle,danse,vol à la tire,furtivité,alcools & drogues",
-    "gesellschaftstalente-liste": "convertir & convaincre,séduction,intimidation,étiquette,connaissance de la rue,nature humaine,persuasion,déguisement,volonté",
-    "naturtalente-liste": "pistage,pratique des nœuds,pêche,orientation,botanique,zoologie,survie",
-    "wissenstalente-liste": "jeux,géographie,histoire,dieux & cultes,art de la guerre,magicologie,mécanique,calcul,droit,mythes & légendes,sphérologie,astronomie",
-    "handwerkstalente-liste": "alchimie,bateaux & navires,conduite,commerce,soin des poisons,soin des maladies,soin de l'esprit,soin des blessures,travail du bois,cuisine,travail du cuir,peinture & dessin,travail du métal,musique,crochetage,travail de la pierre,travail du tissu",
-    "farbschema": "Schéma de couleur"
+    "status-liste": "blind,eingeengt,liegend,bewegungsunfaehig,pechmagnet,vergiftet,brennend,raserei,fixiert,handlungsunfaehig,bewusstlos,unsichtbar,krank,uebler-geruch,versteinert,blutrausch,taub,stumm,ueberrascht",
+    "zustaende-liste": "verwirrung,schmerz,betaeubung,belastung,entrueckung,paralyse,furcht,trance",
+    "koerpertalente-liste": "sinnesschaerfe,zechen,gaukeleien,singen,tanzen,reiten,klettern,verbergen,koerperbeherrschung,selbstbeherrschung,schwimmen,kraftakt,fliegen,taschendiebstahl",
+    "gesellschaftstalente-liste": "gassenwissen,bekehren,verkleiden,etikette,einschuechtern,menschenkenntnis,ueberreden,betoeren,willenskraft",
+    "naturtalente-liste": "pflanzenkunde,orientierung,fischen,faehrtensuchen,fesseln,wildnisleben,tierkunde",
+    "wissenstalente-liste": "kriegskunst,sternkunde,rechnen,goetterkulte,rechtskunde,geographie,geschichtswissen,glueckspiel,magiekunde,mechanik,sagenlegenden,sphaerenkunde",
+    "handwerkstalente-liste": "alchemie,boote,handel,fahrzeuge,schloesserknacken,lebensmittelbearbeitung,musizieren,malenzeichnen,hkseele,hkwunden,hkkrankheiten,hkgift,steinbearbeitung,holzbearbeitung,lederbearbeitung,metallbearbeitung,stoffbearbeitung",
+    "farbschema": "Schéma de couleur",
+    "add_modifikator": "Modifikator hinzufügen",
+    "mu_mod": "Mut +/-",
+    "kl_mod": "Klugheit +/-",
+    "in_mod": "Intuition +/-",
+    "ch_mod": "Charisma +/-",
+    "ff_mod": "Fingerfertigkeit +/-",
+    "ge_mod": "Gewandheit +/-",
+    "ko_mod": "Konstitution +/-",
+    "kk_mod": "Körperkraft +/-",
+    "abgeleitete_werte": "abgeleitete Werte",
+    "le_modifikator": "Lebensenergie +/-",
+    "ae_modifikator": "Astralenergie +/-",
+    "ke_modifikator": "Karmalenergie +/-",
+    "sk_modifikator": "Seelenkraft +/-",
+    "zk_modifikator": "Zähigkeit +/-",
+    "ini_modifikator": "Initiative +/-",
+    "aw_modifikator": "Ausweichen +/-",
+    "gs_modifikator": "Geschwindigkeit +/-",
+    "schips_modifikator": "Schicksalspunkte +/-",
+    "le_regeneration_mod": "Regeneration LE +/-",
+    "ae_regeneration_mod": "Regeneration AE +/-",
+    "ke_regeneration_mod": "Regeneration KE +/-",
+    "kampfsonderfertigkeiten": "Kampfsonderfertigkeiten",
+    "at_sf_mod": "Attacke +/-",
+    "pa_sf_mod": "Parade +/-",
+    "aw_sf_mod": "Ausweichen +/-",
+    "tp_sf_mod": "Trefferpunkte +/-",
+    "fk_sf_mod": "Fernkampf +/-",
+    "nh_at_sf_mod": "Nebenhand AT +/-",
+    "nh_pa_sf_mod": "Nebenhand PA +/-",
+    "nh_tp_sf_mod": "Nebenhand TP +/-",
+    "parade_zweite_mod": "Zusätzliche PA +/-",
+    "ausweichen_zweite_mod": "Zusätzliches AW +/-",
+    "beidhand_kampf_mod": "Beidhändigkeit-Mod. +/-",
+    "falsche_hand_mod": "Falsche Hand Mod. +/-",
+    "talente_mod": "Talente Würfelmodifikator"
 }
