uc-854 update translations

--- a/Forbidden_Lands/translations/es.json
+++ b/Forbidden_Lands/translations/es.json
@@ -44,7 +44,7 @@
 	"coins-u": "COINS",
 	"cold": "Cold",
 	"condition-u": "CONDITIONS",
-	"consumeable": "Consumable",
+	"consumable": "Consumable",
 	"consumable-note": "**nota:** está seguro/a que reduzcas a mano el dado consumible en la ficha si tiras ruina.",
 	"consumable-u": "CONSUMABLES",
 	"copper": "Copper",
