--- a/Forbidden_Lands/translations/zu.json
+++ b/Forbidden_Lands/translations/zu.json
@@ -44,7 +44,7 @@
 	"coins-u": "crwdns90840:0crwdne90840:0",
 	"cold": "crwdns90842:0crwdne90842:0",
 	"condition-u": "crwdns90844:0crwdne90844:0",
-	"consumeable": "crwdns131560:0crwdne131560:0",
+	"consumable": "crwdns131842:0crwdne131842:0",
 	"consumable-note": "crwdns110836:0crwdne110836:0",
 	"consumable-u": "crwdns90846:0crwdne90846:0",
 	"copper": "crwdns90848:0crwdne90848:0",
