--- a/MassEffect_5e/translations/es.json
+++ b/MassEffect_5e/translations/es.json
@@ -21,55 +21,55 @@
 	"wis-u": "SAB",
 	"cha-u": "CAR",
 	"saves-u": "SALVACIONES",
-	"skills-u": "SKILLS",
+	"skills-u": "HABILIDADES",
 	"acrobatics-u": "ACROBATICS",
 	"vehicle_handling-u": "VEHICLE HANDLING",
 	"electronics-u": "ELECTRONICS",
-	"athletics-u": "ATHLETICS",
-	"deception-u": "DECEPTION",
+	"athletics-u": "ATLETISMO",
+	"deception-u": "ENGAÑO",
 	"history-u": "HISTORIA",
 	"insight-u": "PERSPICACIA",
 	"intimidation-u": "INTIMIDACIÓN",
 	"investigation-u": "INVESTIGACIÓN",
 	"medicine-u": "MEDICINA",
 	"science-u": "SCIENCE",
-	"perception-u": "PERCEPTION",
-	"performance-u": "PERFORMANCE",
-	"persuasion-u": "PERSUASION",
-	"engineering-u": "ENGINEERING",
-	"sleight_of_hand-u": "SLEIGHT OF HAND",
-	"stealth-u": "STEALTH",
-	"survival-u": "SURVIVAL",
+	"perception-u": "PERCEPCIÓN",
+	"performance-u": "INTERPRETACIÓN",
+	"persuasion-u": "PERSUASIÓN",
+	"engineering-u": "INGENIERÍA",
+	"sleight_of_hand-u": "JUEGO DE MANOS",
+	"stealth-u": "SIGILO",
+	"survival-u": "SUPERVIVENCIA",
 	"damage-vuln-u": "DAMAGE VULNERABILITIES",
-	"npc-dmg-vuln-place": "fire",
+	"npc-dmg-vuln-place": "fuego",
 	"damage-res-u": "DAMAGE RESISTANCES",
-	"npc-dmg-res-place": "cold",
+	"npc-dmg-res-place": "frío",
 	"damage-imm-u": "DAMAGE IMMUNITIES",
 	"npc-dmg-imm-place": "lightning, thunder",
 	"cond-imm-u": "CONDITION IMMUNITIES",
 	"npc-cond-imm-place": "charmed",
 	"senses-u": "SENSES",
 	"npc-senses-place": "darkvision 120ft., passive Perception 16",
-	"langs-u": "LANGUAGES",
-	"lang-u": "LANGUAGE",
+	"langs-u": "IDIOMAS",
+	"lang-u": "IDIOMA",
 	"npc-langs-place": "Abyssal, Common, Infernal",
 	"challenge-u": "CHALLENGE",
-	"xp-u": "XP",
+	"xp-u": "PE",
 	"spellcast-npc-u": "SPELLCASTING NPC",
 	"spell-ability-u": "SPELLCASTING ABILITY",
 	"none-u": "NONE",
-	"strength-u": "STRENGTH",
-	"strength-save-u": "STRENGTH SAVE",
-	"dexterity-u": "DEXTERITY",
-	"dexterity-save-u": "DEXTERITY SAVE",
-	"constitution-u": "CONSTITUTION",
-	"constitution-save-u": "CONSTITUTION SAVE",
-	"intelligence-u": "INTELLIGENCE",
-	"intelligence-save-u": "INTELLIGENCE SAVE",
-	"wisdom-u": "WISDOM",
-	"wisdom-save-u": "WISDOM SAVE",
-	"charisma-u": "CHARISMA",
-	"charisma-save-u": "CHARISMA SAVE",
+	"strength-u": "FUERZA",
+	"strength-save-u": "SALVACIÓN DE FUERZA",
+	"dexterity-u": "DESTREZA",
+	"dexterity-save-u": "SALVACIÓN DE DESTREZA",
+	"constitution-u": "CONSTITUCIÓN",
+	"constitution-save-u": "SALVACIÓN DE CONSTITUCIÓN",
+	"intelligence-u": "INTELIGENCIA",
+	"intelligence-save-u": "SALVACIÓN DE INTELIGENCIA",
+	"wisdom-u": "SABIDURÍA",
+	"wisdom-save-u": "SALVACIÓN DE SABIDURÍA",
+	"charisma-u": "CARISMA",
+	"charisma-save-u": "SALVACIÓN DE CARISMA",
 	"spell-dc-u": "SPELL DC",
 	"spell-atk-bonus-u": "SPELL ATTACK BONUS",
 	"has-reaction-u": "HAS REACTIONS",
@@ -89,21 +89,21 @@
 	"never-dmg": "Don't Auto Roll Damage",
 	"always-dmg": "Auto Roll Damage &amp; Crit",
 	"ac": "Armor Class",
-	"hp": "Hit Points",
-	"shields": "Shields",
-	"speed": "Speed",
+	"hp": "Puntos de golpe",
+	"shields": "Escudos",
+	"speed": "Velocidad",
 	"language-proficiencies": "Language Proficiencies:",
 	"skill-proficiencies": "Skill Proficiencies:",
 	"weapon-proficiencies": "Weapon Proficiencies",
 	"armor-proficiencies": "Armor Proficiencies:",
 	"saving-throw": "Saving Throws",
-	"str": "Str",
+	"str": "Fue",
 	"dex": "Dex",
 	"con": "Con",
 	"int": "Int",
 	"wis": "Wis",
-	"cha": "Cha",
-	"skills": "Skills",
+	"cha": "Car",
+	"skills": "Habilidades",
 	"acrobatics": "Acrobatics",
 	"vehicle_handling": "Vehicle Handling",
 	"electronics": "Electronics",
@@ -113,15 +113,15 @@
 	"insight": "Insight",
 	"intimidation": "Intimidation",
 	"investigation": "Investigation",
-	"medicine": "Medicine",
-	"science": "Science",
-	"perception": "Perception",
-	"performance": "Performance",
-	"persuasion": "Persuasion",
-	"engineering": "Engineering",
-	"sleight_of_hand": "Sleight of Hand",
-	"stealth": "Stealth",
-	"survival": "Survival",
+	"medicine": "Medicina",
+	"science": "Ciencia",
+	"perception": "Percepción",
+	"performance": "Interpretación",
+	"persuasion": "Persuasión",
+	"engineering": "Ingeniería",
+	"sleight_of_hand": "Juego de manos",
+	"stealth": "Sigilo",
+	"survival": "Supervivencia",
 	"dmg-vuln": "Damage Vulnerabilities",
 	"dmg-res": "Damage Resistances",
 	"dmg-imm": "Damage Immunities",
@@ -130,15 +130,15 @@
 	"langs": "Languages",
 	"challenge": "Challenge",
 	"npc-trait-name-place": "False Appearance.",
-	"npc-trait-desc-place": "If the dragon fails...",
-	"actions": "Actions",
+	"npc-trait-desc-place": "Si el dragón falla...",
+	"actions": "Acciones",
 	"adv": "Advantage",
 	"norm": "Normal",
 	"disadv": "Disadvantage",
-	"name:-u": "NAME:",
-	"attack-u": "ATTACK",
-	"type:-u": "TYPE:",
-	"melee": "Melee",
+	"name:-u": "NOMBRE:",
+	"attack-u": "ATAQUE",
+	"type:-u": "TIPO:",
+	"melee": "Cuerpo a cuerpo",
 	"ranged": "Ranged",
 	"range-reach:-u": "RANGE/REACH:",
 	"range-reach-place": "5 ft.",
@@ -149,10 +149,10 @@
 	"on-hit:-u": "ON HIT:",
 	"on-hit-place": "slashing",
 	"on-hit2:-u": "ON HIT 2:",
-	"on-hit-2-place": "fire",
-	"hit:": "Hit: ",
-	"reactions": "Reactions",
-	"npc-repeating-name-place": "Parry.",
+	"on-hit-2-place": "fuego",
+	"hit:": "Golpe: ",
+	"reactions": "Reacciones",
+	"npc-repeating-name-place": "Parada.",
 	"npc-repeating-desc-place": "The creature adds 2 to its AC against...",
 	"spells": "Spells",
 	"prep-u": "PREP",
@@ -179,18 +179,18 @@
 	"ruby-dust-place": "ruby dust worth 50gp",
 	"concentration-u": "CONCENTRATION",
 	"concentration": "Concentration",
-	"duration:-u": "DURATION:",
-	"duration:": "Duration:",
+	"duration:-u": "DURACIÓN:",
+	"duration:": "Duración:",
 	"difficulty-class-abv": "DC",
 	"output:-u": "OUTPUT:",
 	"spellcard-u": "SPELLCARD",
 	"spell-atk:-u": "SPELL ATTACK:",
-	"none": "None",
-	"dmg:-u": "DAMAGE:",
-	"dmg2:-u": "DAMAGE2:",
+	"none": "Ninguno",
+	"dmg:-u": "DAÑO:",
+	"dmg2:-u": "DAÑO2:",
 	"healing:-u": "HEALING:",
 	"add-ability-mod-u": "ADD ABILITY MOD TO DAMAGE OR HEALING",
-	"effect:-u": "EFFECT:",
+	"effect:-u": "EFECTO:",
 	"npc-atk-effect-place": "Half damage",
 	"desc:-u": "DESCRIPTION:",
 	"at-higher-lvl:-u": "AT HIGHER LEVELS:",
@@ -201,16 +201,16 @@
 	"atk-range-place": "5 ft.",
 	"atk-target-place": "One target",
 	"atk-dmg-type-place": "slashing",
-	"atk-dmg-type2-place": "fire",
-	"adv-u": "ADVANTAGE",
+	"atk-dmg-type2-place": "fuego",
+	"adv-u": "VENTAJA",
 	"norm-u": "NORMAL",
-	"disadv-u": "DISADVANTAGE",
+	"disadv-u": "DESVENTAJA",
 	"core-u": "CORE",
 	"bio-u": "BIO",
-	"spells-u": "SPELLS",
+	"spells-u": "CONJUROS",
 	"feats-u": "FEATS",
 	"review-u": "REVIEW",
-	"char-name-u": "CHARACTER NAME",
+	"char-name-u": "NOMBRE DE PERSONAJE",
 	"barbarian": "Barbarian",
 	"bard": "Bard",
 	"cleric": "Cleric",
@@ -262,7 +262,7 @@
 	"engineering-core": "Engineering <span>(Int)</span>",
 	"sleight_of_hand-core": "Sleight of Hand <span>(Dex)</span>",
 	"stealth-core": "Sigilo <span>(Des)</span>",
-	"survival-core": "Survival <span>(Wis)</span>",
+	"survival-core": "Supervivencia <span>(Sab)</span>",
 	"pass-wis-u": "PASSIVE WISDOM (PERCEPTION)",
 	"tool-u": "TOOL",
 	"pro-u": "PRO",
@@ -529,7 +529,7 @@
 	"innate:-u": "INNATE:",
 	"mod:-u": "MOD:",
 	"hpmods:-u": "HP MODIFIERS:",
-	"charmancer-welcome": "Welcome to the Charactermancer!",
+	"charmancer-welcome": "¡Bienvenido al Charactermancer!",
 	"charmancer-what-is": "The Charactermancer is a step-by-step process that makes building a character simple and streamlined. Changes are saved as you progress, but the character sheet is only updated when the Charactermancer has been completed.",
 	"get-started": "Get started by clicking Next.",
 	"opt-out-u": "OPT OUT",
