--- a/Dragon Age RPG/translations/es.json
+++ b/Dragon Age RPG/translations/es.json
@@ -1,49 +1,49 @@
 {
-	"character": "Character",
+	"character": "Personaje",
 	"grimoire": "Grimoire",
 	"background": "Background",
 	"talents": "Talents",
-	"communication-u": "COMMUNICATION",
+	"communication-u": "COMUNICACIÓN",
 	"primary-skill": "Primary Skill",
 	"focuses": "Focuses",
 	"roll-w-focus": "Roll with focus",
 	"constitution-u": "CONSTITUTION",
 	"cunning-u": "CUNNING",
-	"dexterity-u": "DEXTERITY",
+	"dexterity-u": "DESTREZA",
 	"magic-u": "MAGIC",
-	"perception-u": "PERCEPTION",
-	"strength-u": "STRENGTH",
+	"perception-u": "PERCEPCIÓN",
+	"strength-u": "FUERZA",
 	"willpower-u": "WILLPOWER",
 	"name-u": "NAME",
 	"background-u": "BACKGROUND",
 	"age-u": "AGE",
 	"gender-u": "GENDER",
 	"weight-u": "WEIGHT",
-	"height-u": "HEIGHT",
+	"height-u": "ALTURA",
 	"appearance-u": "APPEARANCE",
 	"distinguishing-features": "Distinguishing Features",
 	"class-u": "CLASS",
-	"experience-u": "EXPERIENCE",
+	"experience-u": "EXPERIENCIA",
 	"level-u": "LEVEL",
-	"defense-u": "DEFENSE",
+	"defense-u": "DEFENSA",
 	"armor-u": "ARMOR",
 	"speed-u": "SPEED",
-	"health-u": "HEALTH",
+	"health-u": "SALUD",
 	"mana-u": "MANA",
 	"shield-bonus": "Shield Bonus",
 	"penalty": "Penalty",
 	"charge": "Charge",
 	"run": "Run",
 	"max": "Max",
-	"armor-type-u": "ARMOR TYPE",
+	"armor-type-u": "TIPO DE ARMADURA",
 	"class-powers-and-spells-u": "CLASS POWERS AND SPELLS",
 	"talents-and-languages-u": "TALENTS AND LANGUAGES",
-	"melee-weapon-u": "MELEE WEAPON",
+	"melee-weapon-u": "ARMA CUERPO A CUERPO",
 	"attack-roll-u": "ATTACK ROLL",
-	"damage-u": "DAMAGE",
+	"damage-u": "DAÑO",
 	"battle-axe": "Battle Axe",
-	"weapon-details": "Weapon Details",
-	"weapon-groups": "Weapon Groups",
+	"weapon-details": "Detalles de arma",
+	"weapon-groups": "Grupos de arma",
 	"ranged-weapon-u": "RANGED WEAPON",
 	"range-u": "RANGE",
 	"ammo-u": "AMMO",
@@ -62,23 +62,23 @@
 	"casting-time-u": "CASTING TIME",
 	"target-number-small-u": "TN",
 	"test-u": "TEST",
-	"spellpower": "Spellpower",
-	"spell effect": "Spell Effect",
-	"character-u": "CHARACTER",
+	"spellpower": "Poder de conjuro",
+	"spell effect": "Efecto de conjuro",
+	"character-u": "PERSONAJE",
 	"concept-u": "CONCEPT",
-	"languages-u": "LANGUAGES",
+	"languages-u": "IDIOMAS",
 	"goals-u": "GOALS",
 	"ties-and-family-u": "TIES AND FAMILY",
-	"equipment-u": "EQUIPMENT",
+	"equipment-u": "EQUIPO",
 	"item": "Item",
 	"quantity": "Quantity",
 	"money-u": "MONEY",
 	"copper-pieces-small-u": "CP",
 	"silver-pieces-small-u": "SP",
 	"gold-pieces-small-u": "GP",
-	"talent-u": "TALENT",
-	"details-u": "DETAILS",
+	"talent-u": "TALENTO",
+	"details-u": "DETALLES",
 	"novice": "Novato",
 	"journeyman": "Journeyman",
-	"master": "Master"
+	"master": "Maestro"
 }
