--- a/Das_Schwarze_Auge_5/translations/fr.json
+++ b/Das_Schwarze_Auge_5/translations/fr.json
@@ -28,7 +28,7 @@
   "Inventar": "Inventaire",
   "Notizen": "Notes",
   "Konfiguration": "Configuration",
-  "Grundwerte": "Qualités",
+  "Grundwerte": "Valeurs de base",
   "Vorteile": "Avantages",
   "Nachteile": "Désavantages",
   "Sonderfertigkeiten": "Capacités spéc.",
@@ -2171,7 +2171,7 @@
   "Eigenschaft": "Qualité",
   "Probe: ": "Épreuve:",
   "Ergebnis:": "Résultat: ",
-  "Auswirkung: ": "Répercussions: ",
+  "Auswirkung: ": "Effet : ",
   "Waffe-zerstört": "Arme détruite",
   "Waffe-schwer-beschädigt": "Arme gravement endommagée",
   "Waffe-beschädigt": "Arme endommagée",
