--- a/Delta Green 2/translations/fr.json
+++ b/Delta Green 2/translations/fr.json
@@ -8,14 +8,14 @@
 	"0": "0",
 	"1. last name, first name (and alias or code name if applicable)": "1. nom, prénom (et alias ou nom de code le cas échéant)",
 	"10": "10",
-	"11. bonds": "11. bonds",
+	"11. bonds": "11. liens",
 	"112382": "112382",
 	"12. motivations and mental disorders": "12. motivations et désordres mentaux",
 	"13. incidents of san loss without going insane": "13. incidents of san loss without going insane",
 	"14. wounds and ailments": "14. wounds and ailments",
-	"15. armor and gear": "15. armor and gear",
+	"15. armor and gear": "15. armure et équipement",
 	"16. weapons": "16. armes",
-	"17. personal details and notes": "17. personal details and notes",
+	"17. personal details and notes": "17. détails personnels et notes",
 	"18. developments which affect home and family": "18. developments which affect home and family",
 	"19. special training": "19. special training",
 	"2. profession (rank if applicable)": "2. profession (rang le cas échéant)",
