--- a/Forbidden_Lands/translations/fr.json
+++ b/Forbidden_Lands/translations/fr.json
@@ -44,7 +44,7 @@
 	"coins-u": "ARGENT",
 	"cold": "Frigorifié",
 	"condition-u": "CONDITIONS",
-	"consumable": "Consumable",
+	"consumable": "Consommable",
 	"consumable-note": "**note** assurez vous de réduire manuellement le dé consommable sur la feuille si vous lancez le dé de fléau.",
 	"consumable-u": "CONSOMMABLES",
 	"copper": "Cuivre",
@@ -258,5 +258,5 @@
 	"wool": "Laine",
 	"yes": "Oui",
 	"yes-1": "Oui, -1",
-	"young-1": "Jeune +0"
+	"young-1": "Jeune"
 }
