--- a/Shadowrun5thEdition/translations/fr.json
+++ b/Shadowrun5thEdition/translations/fr.json
@@ -146,7 +146,7 @@
     "gear": "Équipement",
     "gm": "Pour le MJ",
     "gm-whisper": "Murmurer le Jet au MJ",
-    "/w GM": "/w GM",
+    "/w GM": "/w MJ",
     "grunt": "Brute",
     "gunnery": "Artillerie",
     "gymnastics": "Gymnastique",
@@ -285,7 +285,7 @@
     "publicawareness": "Renommée",
     "qualities": "Qualités",
     "quality": "Qualité",
-    "quantity": "Quantity",
+    "quantity": "Quantité",
     "r": "R",
     "radi": "Ray.",
     "radiationprotection": "Protection contre les radiations",
@@ -328,11 +328,11 @@
     "sorcery": "Sorcellerie",
     "sorcerygroup": "Groupe Sorcellerie",
     "special": "Spécial",
-    "specialization": "Specialization",
+    "specialization": "Spécialisation",
     "speed": "Vitesse",
     "speedoff": "Vitesse (Off)",
     "spellcasting": "Lancement de sort",
-    "category": "Category",
+    "category": "Catégorie",
     "spells": "Sorts",
     "sprite": "Sprite",
     "ss": "CC",
@@ -383,17 +383,17 @@
     "importecharacter": "Importer un personnage",
     "apply": "Appliquer",
     "importertext": "Vous pouvez importer un personnage avec un JSON de Chummer. Le propriétaire de la partie doit définir un Compendium dans les paramètres de la partie. Peu importe lequel vous choisissez. Le logiciel Charactermancer nécessite simplement d'en choisir un.",
-    "character name": "character name",
-    "player name": "player name",
-    "walk modifier": "walk modifier",
-    "run modifier": "run modifier",
-    "movement modifier": "movement modifier",
+    "character name": "nom du personnage",
+    "player name": "nom du joueur",
+    "walk modifier": "modificateur de marche",
+    "run modifier": "modificateur de course",
+    "movement modifier": "modificateur de mouvement",
     "preperations": "preperations",
     "force": "force",
-    "potency": "potency",
-    "trigger": "trigger",
-    "command": "command",
+    "potency": "puissance",
+    "trigger": "déclencheur",
+    "command": "commandement",
     "contact": "contact",
-    "time": "time",
-    "adeptpowers": "Adept Powers or Other Abilities"
+    "time": "temps",
+    "adeptpowers": "Pouvoirs d'adepte ou autres capacités"
 }
