--- a/Das_Schwarze_Auge_5_Tsa_Edition/translations/fr.json
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/translations/fr.json
@@ -596,40 +596,40 @@
     "wissenstalente-liste": "kriegskunst,sternkunde,rechnen,goetterkulte,rechtskunde,geographie,geschichtswissen,glueckspiel,magiekunde,mechanik,sagenlegenden,sphaerenkunde",
     "handwerkstalente-liste": "alchemie,boote,handel,fahrzeuge,schloesserknacken,lebensmittelbearbeitung,musizieren,malenzeichnen,hkseele,hkwunden,hkkrankheiten,hkgift,steinbearbeitung,holzbearbeitung,lederbearbeitung,metallbearbeitung,stoffbearbeitung",
     "farbschema": "Schéma de couleur",
-    "add_modifikator": "Modifikator hinzufügen",
-    "mu_mod": "Mut +/-",
-    "kl_mod": "Klugheit +/-",
+    "add_modifikator": "Ajouter un modificateur",
+    "mu_mod": "Courage +/-",
+    "kl_mod": "Intelligence +/-",
     "in_mod": "Intuition +/-",
-    "ch_mod": "Charisma +/-",
-    "ff_mod": "Fingerfertigkeit +/-",
-    "ge_mod": "Gewandheit +/-",
-    "ko_mod": "Konstitution +/-",
-    "kk_mod": "Körperkraft +/-",
-    "abgeleitete_werte": "abgeleitete Werte",
-    "le_modifikator": "Lebensenergie +/-",
-    "ae_modifikator": "Astralenergie +/-",
-    "ke_modifikator": "Karmalenergie +/-",
-    "sk_modifikator": "Seelenkraft +/-",
-    "zk_modifikator": "Zähigkeit +/-",
-    "ini_modifikator": "Initiative +/-",
-    "aw_modifikator": "Ausweichen +/-",
-    "gs_modifikator": "Geschwindigkeit +/-",
-    "schips_modifikator": "Schicksalspunkte +/-",
-    "le_regeneration_mod": "Regeneration LE +/-",
-    "ae_regeneration_mod": "Regeneration AE +/-",
-    "ke_regeneration_mod": "Regeneration KE +/-",
-    "kampfsonderfertigkeiten": "Kampfsonderfertigkeiten",
-    "at_sf_mod": "Attacke +/-",
+    "ch_mod": "Charisme +/-",
+    "ff_mod": "Dextérité +/-",
+    "ge_mod": "Agilité +/-",
+    "ko_mod": "Constitution +/-",
+    "kk_mod": "Force +/-",
+    "abgeleitete_werte": "Valeurs dérivées",
+    "le_modifikator": "Énergie vitale +/-",
+    "ae_modifikator": "Énergie astrale +/-",
+    "ke_modifikator": "Énergie karmique +/-",
+    "sk_modifikator": "Ténacité mentale +/-",
+    "zk_modifikator": "Ténacité physique +/-",
+    "ini_modifikator": "Inititative +/-",
+    "aw_modifikator": "Esquive +/-",
+    "gs_modifikator": "Vitesse +/-",
+    "schips_modifikator": "Points de destin +/-",
+    "le_regeneration_mod": "Régénération d'EV +/-",
+    "ae_regeneration_mod": "Régénération d'EA +/-",
+    "ke_regeneration_mod": "Régénération d'EK +/-",
+    "kampfsonderfertigkeiten": "CS de Combat",
+    "at_sf_mod": "Attaque +/-",
     "pa_sf_mod": "Parade +/-",
-    "aw_sf_mod": "Ausweichen +/-",
-    "tp_sf_mod": "Trefferpunkte +/-",
-    "fk_sf_mod": "Fernkampf +/-",
-    "nh_at_sf_mod": "Nebenhand AT +/-",
-    "nh_pa_sf_mod": "Nebenhand PA +/-",
-    "nh_tp_sf_mod": "Nebenhand TP +/-",
-    "parade_zweite_mod": "Zusätzliche PA +/-",
-    "ausweichen_zweite_mod": "Zusätzliches AW +/-",
-    "beidhand_kampf_mod": "Beidhändigkeit-Mod. +/-",
-    "falsche_hand_mod": "Falsche Hand Mod. +/-",
-    "talente_mod": "Talente Würfelmodifikator"
+    "aw_sf_mod": "Esquive +/-",
+    "tp_sf_mod": "Points d'Impact +/-",
+    "fk_sf_mod": "Combat à distance +/-",
+    "nh_at_sf_mod": "Main non-directrice AT +/-",
+    "nh_pa_sf_mod": "Main non-directrice PRD +/-",
+    "nh_tp_sf_mod": "Main non-directrice PI +/-",
+    "parade_zweite_mod": "PRD supplémentaire +/-",
+    "ausweichen_zweite_mod": "ESQ supplémentaire +/-",
+    "beidhand_kampf_mod": "Ambidextre mod. +/-",
+    "falsche_hand_mod": "Main non directrice mod. +/-",
+    "talente_mod": "Modificateur aux dés de talent"
 }
