--- a/SavageWorlds-Tabbed/translations/es.json
+++ b/SavageWorlds-Tabbed/translations/es.json
@@ -50,8 +50,8 @@
     "mod": "Mod",
     "armor": "Armad.",
     "current": "Actual",
-    "academics-stat": "Academics",
-    "academics": "Académico:",
+    "academics-stat": "Humanidades",
+    "academics": "Humanidades",
     "pace": "Paso",
     "run": "Correr",
     "runs": "runs for",
@@ -171,7 +171,7 @@
     "show-faith": "Modtrar Fe",
     "show-gambling": "Mostrar Apostar",
     "show-guts": "Mostrar Redaños",
-    "show-healing": "Mostrar Sanar",
+    "show-healing": "Mostrar Medicina",
     "show-intimidation": "Mostrar Intimidar",
     "show-investigation": "Mostrar Investigación",
     "show-lockpicking": "Mostrar Forz.Cerraduras",
@@ -196,43 +196,43 @@
     "fighting": "Pelear",
     "specialization": "Especialización",
     "core-skills": "Core Skills",
-    "athletics": "Athletics",
-    "battle": "Battle",
+    "athletics": "Atletismo",
+    "battle": "Tácticas",
     "boating": "Navegar",
     "climbing": "Trepar",
-    "common-knowledge": "Common Knowledge",
+    "common-knowledge": "Con. generales",
     "driving": "Conducir",
-    "electronics": "Electronics",
+    "electronics": "Electrónica",
     "faith": "Fe",
     "focus": "Focus",
     "gambling": "Apostar",
     "guts": "Redaños",
     "hacking": "Hacking",
-    "healing": "Sanar",
+    "healing": "Medicina",
     "intimidation": "Intimidar",
     "investigation": "Investigación",
     "language": "Language",
     "lockpicking": "Forzar Cerraduras",
     "notice": "Notar",
-    "occult": "Occult",
-    "performance": "Performance",
+    "occult": "Ocultismo",
+    "performance": "Interpretación",
     "persuasion": "Persuadir",
     "piloting": "Pilotar",
     "psionics": "Psionica",
     "psionic-ability": "Psionic Ability",
-    "research": "Research",
+    "research": "Investigar",
     "repair": "Reparar",
     "riding": "Cabalgar",
     "ritual": "Ritual",
-    "science": "Science",
-    "shooting": "Shooting",
+    "science": "Ciencias",
+    "shooting": "Disparar",
     "spellcasting": "Hechicería",
     "stealth": "Sigilo",
     "streetwise": "Callejear",
     "survival": "Supervivencia",
     "swimming": "Nadar",
     "taunt": "Provocar",
-    "thievery": "Thievery",
+    "thievery": "Latrocinio",
     "throwing": "Lanzar",
     "tracking": "Rastrear",
     "weird-science": "Ciencia Extraña",
@@ -697,7 +697,7 @@
     "whisper-edge": "Whisper Edge Description",
     "edge-type": "Type or Took at...",
     "advancements": "Advancements",
-    "shaken": "Shaken",
+    "shaken": "Aturdido",
     "incapacitated-abbr": "Inc",
     "incapacitated": "Incapacitated",
     "iron-tiks": "Tiks",
@@ -738,9 +738,9 @@
     "total-armor-weight-carried": "Total Armor Weight Carried",
     "not-applicable-abbr": "N/A",
     "extra": "Extra",
-    "distracted": "Distracted",
+    "distracted": "Distraido",
     "vulnerable": "Vulnerable",
-    "stunned": "Stunned",
+    "stunned": "Conmocionado",
     "armor-piercing-abbr-u": "AP",
     "strength-abbr": "Str",
     "agility-abbr": "Agl",
@@ -888,7 +888,7 @@
     "increase": "Increase",
     "maximum": "Maximum",
     "roll-extra-xp-for-bennies": "Roll XP for un-/spent Bennies",
-    "weirdscience": "Weird Science",
+    "weirdscience": "Ciencia Extraña",
     "bug-fixes": "Bug Fixes",
     "sheet-enhancements": "Sheet Enhancements",
     "useability-enhancements": "Usability Enhancements",
